Adicionado fotos dos dias 5 e 12 de fevereiro de 2020.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
 				</div>
 				<div class="row photos">
 					<div class="col-sm-6 col-md-4 col-lg-3 item">
+						<a data-lightbox="photos" href="assets/img/celula_agape_12_02_20.jpeg">
+							<img class="img-fluid" src="assets/img/celula_agape_12_02_20.jpeg" />
+
+						</a>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-3 item">
+						<a data-lightbox="photos" href="assets/img/celula_agape_05_02_20.jpeg">
+							<img class="img-fluid" src="assets/img/celula_agape_05_02_20.jpeg" />
+
+						</a>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-3 item">
 						<a data-lightbox="photos" href="assets/img/celula_agape_27_12_19.jpeg">
 							<img class="img-fluid" src="assets/img/celula_agape_27_12_19.jpeg" />
 
@@ -167,18 +179,6 @@
 					<div class="col-sm-6 col-md-4 col-lg-3 item">
 						<a data-lightbox="photos" href="assets/img/hero (4).jpg">
 							<img class="img-fluid" src="assets/img/hero (4).jpg" />
-
-						</a>
-					</div>
-					<div class="col-sm-6 col-md-4 col-lg-3 item">
-						<a data-lightbox="photos" href="assets/img/hero (6).jpg">
-							<img class="img-fluid" src="assets/img/hero (6).jpg" />
-
-						</a>
-					</div>
-					<div class="col-sm-6 col-md-4 col-lg-3 item">
-						<a data-lightbox="photos" href="assets/img/hero (8).jpg">
-							<img class="img-fluid" src="assets/img/hero (8).jpg" />
 
 						</a>
 					</div>
