--- a/index.html
+++ b/index.html
@@ -111,6 +111,18 @@
 				</div>
 				<div class="row photos">
 					<div class="col-sm-6 col-md-4 col-lg-3 item">
+						<a data-lightbox="photos" href="assets/img/celula_agape_11_03_2020.jpeg">
+							<img class="img-fluid" src="assets/img/celula_agape_11_03_2020.jpeg" />
+
+						</a>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-3 item">
+						<a data-lightbox="photos" href="assets/img/celula_agape_04_03_2020.jpeg">
+							<img class="img-fluid" src="assets/img/celula_agape_04_03_2020.jpeg" />
+
+						</a>
+					</div>
+					<div class="col-sm-6 col-md-4 col-lg-3 item">
 						<a data-lightbox="photos" href="assets/img/celula_agape_12_02_20.jpeg">
 							<img class="img-fluid" src="assets/img/celula_agape_12_02_20.jpeg" />
 
@@ -170,18 +182,6 @@
 
 						</a>
 					</div>
-					<div class="col-sm-6 col-md-4 col-lg-3 item">
-						<a data-lightbox="photos" href="assets/img/hero (2).jpg">
-							<img class="img-fluid" src="assets/img/hero (2).jpg" />
-
-						</a>
-					</div>
-					<div class="col-sm-6 col-md-4 col-lg-3 item">
-						<a data-lightbox="photos" href="assets/img/hero (4).jpg">
-							<img class="img-fluid" src="assets/img/hero (4).jpg" />
-
-						</a>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -204,7 +204,7 @@
 					<p>Vila Macedo - Piraquara</p>
 					<p>Toda Quarta-feira às 20:00 hrs</p>
 				</div>
-				<p class="copyright">Célula Ágape © 2019</p>
+				<p class="copyright">Célula Ágape © 2020</p>
 			</footer>
 		</div>
 		<script src="assets/js/jquery.min.js"></script>
